# todo-server

./: Cargo.toml
data/: todo.json
src/: main.rs
src/handlers/: mod.rs  todo_hander.rs
src/routes/: mod.rs
src/schema/: todo.rs
src/utils/: util.rs
