[package]
name = "bulding_server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
tokio = { version = "1.52.3", features = ["full"] }
serde = {version = "1.0.228", features = ["derive"]}
tracing-subscriber = "0.3.23"
tracing = "0.1.44"
uuid = {version = "1.23.3", features = ["v4", "serde"]}
